After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 652488 - [patch] fixes for some UI glitches
[patch] fixes for some UI glitches
Status: RESOLVED FIXED
Product: rhythmbox
Classification: Other
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: RhythmBox Maintainers
RhythmBox Maintainers
Depends on:
Blocks:
 
 
Reported: 2011-06-13 19:02 UTC by Cosimo Cecchi
Modified: 2012-01-08 06:16 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
cell-renderer-expander: fix expanders rendering in the sidebar (3.69 KB, patch)
2011-06-13 19:02 UTC, Cosimo Cecchi
committed Details | Review
prefs: don't let the prefs vboxes fill the dialog space (49.65 KB, patch)
2011-06-13 19:02 UTC, Cosimo Cecchi
committed Details | Review

Description Cosimo Cecchi 2011-06-13 19:02:25 UTC
Hi, attached patches fix some GTK3 regressions in the UI.
Comment 1 Cosimo Cecchi 2011-06-13 19:02:26 UTC
Created attachment 189842 [details] [review]
cell-renderer-expander: fix expanders rendering in the sidebar
Comment 2 Cosimo Cecchi 2011-06-13 19:02:28 UTC
Created attachment 189843 [details] [review]
prefs: don't let the prefs vboxes fill the dialog space

Use ALIGN_START instead, so the vboxes in the preferences don't get
squashed up in the whole dialog space and stay top-aligned.

Unfortunately glade adds a lot of noise when opening/saving the UI
files, but the align is the only thing that really changed.
Comment 3 Jonathan Matthew 2011-06-13 22:40:16 UTC
Review of attachment 189842 [details] [review]:

looks OK to me
Comment 4 Cosimo Cecchi 2011-06-13 23:40:59 UTC
Comment on attachment 189842 [details] [review]
cell-renderer-expander: fix expanders rendering in the sidebar

Thanks. Keeping the bug open for the other patch.

Attachment 189842 [details] pushed as ebf73ff - cell-renderer-expander: fix expanders rendering in the sidebar
Comment 5 Jonathan Matthew 2011-06-27 22:50:39 UTC
Review of attachment 189843 [details] [review]:

sorry I forgot about this.  looks OK.
Comment 6 Jonathan Matthew 2012-01-08 06:15:59 UTC
This didn't apply any more so I made the valign changes manually and pushed it as commit 4cdaeaf.