cell-renderer-expander: fix expanders rendering in the sidebar

https://bugzilla.gnome.org/show_bug.cgi?id=652488